# ruspi

./: .env  Cargo.toml  LICENSE  README.md  prod.env
config/: template_config.json
scripts/: create_user.sh  deploy.sh  install.sh  ruspi.service  systemctl_examples.sh
src/: main.rs  routes.rs  server.rs  sse.rs  template_engine.rs  utils.rs  websocket.rs
static/css/: main.min.css
templates/: about.hbs  complex-set-of-routes.hbs  error_404.hbs  hello-world.hbs  index.hbs  jwt.hbs  partials.hbs  routing-pages.hbs  routing-static-files.hbs  serve-static-files.hbs  sse-basics.hbs  sse-chat-app.hbs  tls.hbs  web-socket-chat-app.hbs  web-socket-upgrade.hbs
templates/components/: app-layout.hbs  footer.hbs  navbar.hbs  sidebar.hbs
