[package]
name = "webserver"
version = "0.1.0"
authors = ["Rolf <rolf@scherer.ml>"]
edition = "2018"


[dependencies]
serde = { version= "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "0.2", features = ["full"] }
warp = { version= "0.3", features = ["tls"] }
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15"
handlebars = { version = "3.0", features = ["dir_source"] }
lazy_static = "1.4"
walkdir = "2"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
bytes = "0.5"